--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -15,3 +15,42 @@ html, body {
 .mb-10 { margin-bottom: 10px; }
 
 .pointer { cursor: pointer; }
+
+
+.text-right {
+    text-align: right;
+}
+
+
+.table-content {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    .search-box {
+        margin-bottom: 8px;
+        padding: 8px;
+        .el-form-item {
+            margin-bottom: 0px;
+        }
+    }
+    .table-box {
+        flex: 1;
+        height: 0;
+        overflow: hidden;
+    }
+    .paging-box {
+        margin-top: 8px;
+        padding: 5px 0;
+    }
+    .search-box, .paging-box {
+        text-align: right;
+    }
+    .search-box, .paging-box, .table-box {
+        background-color: #fff;
+        border-radius: 4px;
+    }
+}
+
+// .wrap{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;width:100%;height:100%;}
+// .header,.footer{height:40px;line-height:40px;background-color:#D8D8D8;text-align:center;}
+// .main{-webkit-box-flex:1;-webkit-flex:1;-ms-flex:1;flex:1;width:100%;}
