--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -13,6 +13,10 @@ html, body {
 
 .mb-5 { margin-bottom: 5px; }
 .mb-10 { margin-bottom: 10px; }
+.mt-5 {margin-top: 5px;}
+
+.py-5 {padding: 5px 0;}
+.py-10 {padding: 10px 0;}
 
 .pointer { cursor: pointer; }
 
@@ -49,6 +53,11 @@ html, body {
         background-color: #fff;
         border-radius: 4px;
     }
+}
+
+// mini输入框的padding该小
+.el-input--mini .el-input__inner {
+    padding: 0 8px;
 }
 
 // .wrap{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;width:100%;height:100%;}
