--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -11,6 +11,8 @@ html, body {
 .h-100 { height: 100%; }
 .w-100 { width: 100%; }
 
+.mx-5 { margin: 0 5px; }
+.mx-10 { margin: 0 10px; }
 .mb-5 { margin-bottom: 5px; }
 .mb-10 { margin-bottom: 10px; }
 .mt-5 {margin-top: 5px;}
@@ -58,6 +60,17 @@ html, body {
 // mini输入框的padding该小
 .el-input--mini .el-input__inner {
     padding: 0 8px;
+}
+
+.d-flex {
+    display: flex;
+    flex-grow: 1;
+    .flex-0 {
+        flex: 0;
+    }
+    .flex-1 {
+        flex: 1;
+    }
 }
 
 // .wrap{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;width:100%;height:100%;}
