--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -4,6 +4,7 @@ html, body {
     height: 100%;
     width: 100%;
     overflow: hidden;
+    font-size: 14px;
 }
 
 .overflow-hidden { overflow: hidden; }
@@ -16,12 +17,15 @@ html, body {
 .mb-5 { margin-bottom: 5px; }
 .mb-10 { margin-bottom: 10px; }
 .mt-5 {margin-top: 5px;}
+.mt-10 {margin-top: 10px;}
 
 .py-5 {padding: 5px 0;}
 .py-10 {padding: 10px 0;}
 
 .pointer { cursor: pointer; }
 
+.p-relative { position: relative; }
+.p-absolute { position: absolute; }
 
 .text-right {
     text-align: right;
@@ -73,6 +77,12 @@ html, body {
     }
 }
 
+.el-dialog__header {
+    padding: 15px 20px 10px 20px;
+}
+.el-dialog__body {
+    padding: 10px 20px 20px 20px;
+}
 // .wrap{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;width:100%;height:100%;}
 // .header,.footer{height:40px;line-height:40px;background-color:#D8D8D8;text-align:center;}
 // .main{-webkit-box-flex:1;-webkit-flex:1;-ms-flex:1;flex:1;width:100%;}
